# stdmath

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  angles.hpp  hello.cpp  std.hpp  vec.hpp
C/: stdmath.cpp  stdmath.h
cmake/: c++20modules.cmake  fetchDoctest.cmake  fetchStdBLAS.cmake
math/: AABB.cppm  AABB.hpp  angle.cppm  angles.hpp  color.cppm  mat.hpp  matrix.cppm  matrix.hpp  matrix_transformations.cppm  matrix_transformations.hpp  namespace_alias.hpp  quaternion.cppm  quaternion.hpp  ray.cppm  std.hpp  stdmath.cppm  vec.hpp  vector.cppm  vector.hpp
math/c/: aggregate.py  angle.h.in  angle.i.in  angle_gen.py  bool1.h  bool1.i  bool2.h  bool2.i  bool2x2.h  bool2x2.i  bool2x3.h  bool2x3.i  bool2x4.h  bool2x4.i  bool3.h  bool3.i  bool3x2.h  bool3x2.i  bool3x3.h  bool3x3.i  bool3x4.h  bool3x4.i  bool4.h  bool4.i  bool4x2.h  bool4x2.i  bool4x3.h  bool4x3.i  bool4x4.h  bool4x4.i  byte1.h  byte1.i  byte2.h  byte2.i  byte2x2.h  byte2x2.i  byte2x3.h  byte2x3.i  byte2x4.h  byte2x4.i  (+138 more)
partials/: and_equal.operators.partial  constructor.gen.py  mat.operators.partial  operators.comparison.partial  operators.partial  simd_emulation.partial  slang.gen.py  slang.swig.partial  slang.usings.partial  slang_gen.py  swizzle.gen.py  swizzle.operators.partial  swizzle_gen.py  vec.operators.partial  vec1.constructors.partial.gen  vec1.swizzles.address_of.partial.gen  vec1.swizzles.partial.gen  vec2.constructors.partial.gen  vec2.swizzles.address_of.partial.gen  vec2.swizzles.partial.gen  vec3.constructors.partial.gen  vec3.swizzles.address_of.partial.gen  vec3.swizzles.partial.gen  vec4.constructors.partial.gen  vec4.swizzles.address_of.partial.gen  vec4.swizzles.partial.gen
patches/: stdblas.patch
swig/: macros.i  macros_python.i
tests/: AABB.cpp  CMakeLists.txt  angle.cpp  angles.cpp  c.impl.cpp  color.cpp  mat.cpp  matrix.c.cpp  matrix.cpp  matrix_transformations.cpp  quaternion.cpp  test_c_api.cpp  util.hpp  vec.cpp  vector.c.cpp  vector.cpp
util/: operators.hpp  return_or_void.hpp  simd_emulation.cppm  slang_names.cppm  types.cppm
